Remove setStatus method, have the backend handle that automatically. Status will be set to disconnected after 60 seconds of no tracking activity.
