# controllers/VanService.js
@@ -4,6 +4,20 @@ var SettingsService = require('./SettingsService');
 var mongoose = require('mongoose');
 var Van = mongoose.model('Van');
 
+var lastTrackingUpdate = 0;
+var tracking = false;
+
+//This will
+setInterval(function() {
+    console.log("Running task");
+    console.log("Tracking Status: " + tracking);
+    console.log("Tracking time difference " + (Math.floor(new Date() / 1000) - lastTrackingUpdate));
+    if(tracking && (Math.floor(new Date() / 1000) - lastTrackingUpdate) > 60) {
+        console.log("Tracking disabled")
+        tracking = false;
+    }
+}, 1000);
+
 exports.getVanLocation = function(args, res, next) {
 
     Van.findOne({}, {_id:false, latitude:true, longitude:true}, function(err, task) {
@@ -19,15 +33,9 @@ exports.getVanLocation = function(args, res, next) {
 
 exports.getVanStatus = function(args, res, next) {
 
-    Van.findOne({}, {_id:false, status:true}, function(err, task) {
-        if(err) {
-            res.statusCode = 500;
-            res.end(err.message);
-            return;
-        }
-        res.setHeader('Content-Type', 'application/json');
-        res.end(JSON.stringify(task));
-    });
+    var response = {status: tracking ? "tracking" : "disconnected"};
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(response));
 };
 
 exports.setVanLocation = function(args, res, next) {
@@ -42,37 +50,12 @@ exports.setVanLocation = function(args, res, next) {
         }
         res.setHeader('Content-Type', 'application/json');
         res.end(JSON.stringify(task));
+        lastTrackingUpdate = Math.floor(new Date() / 1000);
+        tracking = true
     });
   } else {
       res.statusCode = 401;
       res.end();
   }
-};
-
-exports.setVanStatus = function(args, res, next) {
-
-    if(SettingsService.getAuthKey() === args['AuthKey'].value) {
-
-        var status = args.body.value.status;
-        if(status !== "tracking" && status !== "disconnected" && status !== "connected") {
-            res.statusCode = 405;
-            res.setHeader('Content-Type', 'application/json');
-            res.end('{"errorDescription":"Status code was not one of the accepted values (tracking, disconnected or connected)"}');
-            return;
-        }
-
-        Van.findOneAndUpdate({}, args.body.value, {new: true, upsert: true, projection: {_id:false, status:true}}, function (err, task) {
-            if (err) {
-                res.statusCode = 500;
-                res.end(err.message);
-                return;
-            }
-            res.setHeader('Content-Type', 'application/json');
-            res.end(JSON.stringify(task));
-        });
-    } else {
-        res.statusCode = 401;
-        res.end();
-    }
 };
 
